Register login implementation midway

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Companion</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Welcome to Health Mantra!</h1>
+    <div id="root">
+        <h1>React not rendering</h1>
+    </div>
     
+    <script type="module" src="./App.js"></script>
 </body>
 </html>
