register login setup done

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to Health Mantra!</h1>
+    <!-- <h1>Welcome to Health Mantra!</h1> -->
     <div id="root">
-        <h1>React not rendering</h1>
+        <h1>React not rendering check from index.html</h1>
     </div>
     
     <script type="module" src="./App.js"></script>
