g O auth link setup done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <h1>Welcome to Health Mantra!</h1> -->
+    <h1>Welcome to Health Mantra!</h1>
     <div id="root">
         <h1>React not rendering check from index.html</h1>
     </div>
